[gd_scene load_steps=3 format=3 uid="uid://d0qty1a551vhs"]

[ext_resource type="Script" path="res://scenes/ui/combat_results_panel.gd" id="1_script"]
[ext_resource type="FontFile" path="res://assets/fonts/monogram.ttf" id="2_font"]

[node name="CombatResultsPanel" type="CanvasLayer"]
layer = 90
script = ExtResource("1_script")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -160.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "~ Combat Results ~"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBox"]
layout_mode = 2

[node name="EntriesContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="ContinueLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "Press Z to continue"
horizontal_alignment = 1
